
      There are new load-balancing versions \code{parLapplyLB} and
      \code{parSapplyLB}.
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Code in packages is now compiled with \code{-NDEBUG} to
      mitigate against \code{assert} being called in production use.
      Developers can turn this off during package development with
      \code{PKG_CPPFLAGS = -UNDEBUG}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
       \item \command{R CMD check} now gives a warning rather than a note
       if it finds inefficiently compressed datasets.   With bzip2 and
       xz compression having been available since 2.10.0, there is no
       excuse for not using them.
     }
   }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item \command{R CMD Rd2dvi} is now defunct: use \command{R CMD Rd2pdf}.

      \item Options such as \code{--max-nsize} and the function
      \code{mem.limits()} are now defunct.

      \item Use of \code{library.dynam()} without specifying all the
      first three arguments is now disallowed.

      Use of \code{chname} in \code{library.dynam()} with the extension
      \file{.so} or \code{.dll} (which was never allowed according
      to the help page) is defunct.  This also applies to
      \code{library.dynam.unload()} and to \code{useDynLib} directives
      in \code{NAMESPACE} files.

      \item The internal functions \code{.readRDS()} and
      \code{.saveRDS()} are now defunct.

      \item The off-line \code{help()} types \samp{"postscript"} and
      \samp{"ps"} are defunct.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{stack()} now gives an error if no vector column is
      selected, rather than returning a 1-column data frame contrary to
      its documentation.

      \item \code{str(x, width)} now \dQuote{obeys} its \code{width}
      argument also for function headers
      and other objects \code{x} where \code{deparse()} is applied.
      