@@ -262,10 +262,15 @@ assignInNamespace <-
         in_load <- Sys.getenv("_R_NS_LOAD_")
         if (nzchar(in_load)) {
             ns_name <- getNamespaceName(ns)
-            if(!in_load %in% c("Matrix", "SparseM") && in_load != ns_name)
-                warning(gettextf("changing locked binding for %s in %s whilst loading %s",
-                                 sQuote(x), sQuote(ns_name), sQuote(in_load)),
-                        call. = FALSE, domain = NA, immediate. = TRUE)
+            if(!in_load %in% c("Matrix", "SparseM") && in_load != ns_name) {
+                msg <-
+                    gettextf("changing locked binding for %s in %s whilst loading %s",
+                             sQuote(x), sQuote(ns_name), sQuote(in_load))
+                if(ns_name %in% tools:::.get_standard_package_names()$base)
+                    stop(msg, domain = NA)
+                else
+                    warning(msg, call. = FALSE, domain = NA, immediate. = TRUE)
+            }
         } else if (nzchar(Sys.getenv("_R_WARN_ON_LOCKED_BINDINGS_"))) {
             ns_name <- getNamespaceName(ns)
             warning(gettextf("changing locked binding for %s in %s",
